[MM-23445] - Fix chevron icon on Firefox (#5134)

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -358,8 +358,6 @@
       
         i.icon-chevron-down {
             max-width: 16px;
-            max-height: 16px;
-            line-height: 18px;
 
             &.hide-arrow {
                 visibility: hidden;
